[gd_scene load_steps=2 format=3 uid="uid://c5hud00001"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
layer = 5
process_mode = 3
script = ExtResource("1_hud")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeartsContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 14.0
theme_override_constants/separation = 1

[node name="ChapterLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 2.0
offset_right = 50.0
offset_bottom = 12.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 11
text = "Cap.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PagesLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = 12.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 11
text = "0/5"
horizontal_alignment = 2
vertical_alignment = 1

[node name="InteractHint" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -14.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 11
text = "[E]"
horizontal_alignment = 2
vertical_alignment = 2
